--- a/src/app/layout/question/attribute-new/attribute-new.component.html
+++ b/src/app/layout/question/attribute-new/attribute-new.component.html
@@ -7,16 +7,15 @@
 <div class="modal-body">
 
     <label for="attribute" class="font-weight-bold" style="margin-bottom: 0px; margin-left: 4px;">Category</label>
-    <input id="attribute" required pattern="[A-z -]+$" #attribute="ngModel" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category">
-    <div class="text-danger" [hidden]="attribute.valid || attribute.untouched">
+    <input id="attribute" required #attributeNew="ngModel" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category">
+
+    <div class="text-danger" [hidden]="attributeNew.valid || isInvalid == false">
       
-        <div  *ngIf="attribute.errors && attribute.errors.required">
+        <div  *ngIf="(attributeNew.errors && attributeNew.errors.required) || isInvalid">
         Category is required
         </div>
-        <div  *ngIf="attribute.errors && attribute.errors.pattern">
-        Category is invalid
-      </div>
+
       </div>
 <div class="modal-footer">
-    <button class="createCategoryButton" [disabled]="!attribute.valid" (click)="create()">Create</button>
+    <button class="createCategoryButton" (click)="create()">Create</button>
 </div>
