--- a/src/app/layout/interview/interview-load/interview-load.component.html
+++ b/src/app/layout/interview/interview-load/interview-load.component.html
@@ -6,10 +6,10 @@
 </div>
 <div class="modal-body">
     <label for="role">Select Interview-Template:</label>
-    <select class="form-control" [(ngModel)]="interviewTitles">
-        <option value="interviewTitles" selected></option>
-        <option [value]="col" *ngFor="let col of interviewTitles">
-            {{col}}
+    <select class="form-control" [(ngModel)]="selectedTemplate">
+        <option value="" hidden selected>Choose One</option>
+        <option [value]="interview.id" *ngFor="let interview of interviews; let i = index">
+            {{interview.title}}
         </option>
     </select>
 </div>
