--- a/src/app/layout/interview/interview-submit/interview-submit.component.html
+++ b/src/app/layout/interview/interview-submit/interview-submit.component.html
@@ -15,8 +15,8 @@
         </div>
     </div>
     <label class="form-row mt-1" for="email">Candidate Email:</label>
-    <input id="email" type="text" class="form-control w-100 p-1 m-1" type="email" placeholder="email@address.com">
+    <input id="email" type="text" class="form-control w-100 p-1 m-1" type="email" [(ngModel)]="email" placeholder="email@address.com">
 </div>
 <div class="modal-footer">
-    <button type="button" class="loadIntButton" (click)="submitInterview()">Submit</button>
+    <button type="button" class="loadIntButton" routerLink="layout/interview-results" (click)="submitInterview()">Submit</button>
 </div>
