--- a/src/app/layout/interview/interview.component.scss
+++ b/src/app/layout/interview/interview.component.scss
@@ -1,12 +1,14 @@
 #interview {
-    margin-top: 50px;
+   
     font-family: "Trebuchet MS",Arial, Helvetica, sans-serif;
     border-collapse: separate;
     border-spacing: 0px;
     width: 100%;
-    
+  }
 
-}
+  /* progressBar */
+  
+  
 
 /* top-left border-radius */
 table tr:first-child th:first-child {
@@ -61,6 +63,7 @@ table tr:first-child th:first-child {
 
 .loadButton {
   margin-top: 20px;
+  margin-bottom: 50px;
   border-radius: 60px;
   border: 0px;
   background-color: rgb(0, 180, 177);
