--- a/src/app/layout/question/question.component.html
+++ b/src/app/layout/question/question.component.html
@@ -8,20 +8,20 @@
                 <h3>Categories</h3>
                 <br>
                 <div>
-                <button class="addCategory container" (click)="addCategory()">Add Category 
-                        <i class="addCategoryIcon material-icons">add_circle</i>
-                </button>
-                               
+                        <button class="addCategory container" (click)="addCategory()">Add Category
+                                <i class="addCategoryIcon material-icons">add_circle</i>
+                        </button>
+
                 </div>
                 <div class="selectors container" style="padding-top: 0px; width: 250px;">
                         <div *ngFor="let attribute of attributes; let i = index">
                                 <label class="font-weight-bold text-center mt-3 mb-0">{{attribute.category}}</label>
-                               
-                                <button class= editPencilButton (click)="editCategory(attribute.id)"> 
+
+                                <button class=editPencilButton (click)="editCategory(attribute.id)">
 
                                         <i class="editPencilIcon material-icons">create</i>
                                 </button>
-                                
+
                                 <select class="form-control w-100" [(ngModel)]="valueOption[attribute.category]"
                                         (change)="filterQuestions()">
                                         <option value="" selected>Any {{attribute.category}}</option>
@@ -36,27 +36,27 @@
         <!-- Page content -->
         <div ng-sidebar-content>
                 <section class="container">
-                        <h2 class="text-white" translate>Interview Questions</h2>
+                        <h2 class="text-white" translate>Questions</h2>
 
-                        
-                                <br>
-                                <div>
-                                        <button class="pdfButton" (click)="generateInterview()">
-                                                <span>Generate Interview-Template</span>
-                                        </button>
-                                </div>
-                                <!--  <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
+
+                        <br>
+                        <div>
+                                <button class="pdfButton" (click)="generateInterview()">
+                                        <span>Generate Interview-Template</span>
+                                </button>
+                        </div>
+                        <!--  <button type="button" class="btn btn-primary right" (click)="updateQuestions()" translate>
                                         Update Questions
                                 </button> -->
-                               
-                                
-                                <button class="QuestButton" (click)="openCreateModal()">Add Question
-                                        
-                                        <i class="addQuestIcon material-icons">add_circle</i>
-                                </button>
-                       
-                       
-                                <br>
+
+
+                        <button class="QuestButton" (click)="openCreateModal()">Add Question
+
+                                <i class="addQuestIcon material-icons">add_circle</i>
+                        </button>
+
+
+                        <br>
                         <table id="question" style="overflow-x:auto;">
                                 <tr>
                                         <th *ngFor="let col of columns">
@@ -67,29 +67,32 @@
                                         <td *ngFor="let col of indexTable; let i = index">
                                                 <ng-container *ngIf="i==0">
                                                         <label class="checkbox-label">
-                                                                <input type="checkbox" (click)="questionCheck(question.id)"/>
+                                                                <input type="checkbox"
+                                                                        (click)="questionCheck(question.id)" />
                                                                 <span class="checkbox-custom"></span>
                                                         </label>
                                                 </ng-container>
-                                                <ng-container *ngIf="i>0" >
+                                                <ng-container *ngIf="i>0">
                                                         {{question[col]}}
                                                 </ng-container>
                                         </td>
                                         <td style="width:150px">
-                                                <button type="button" class="editButtonQuestion" (click)="editQuestion(question.id)" 
-                                                data-toggle="tooltip" data-placement="bottom" title="Edit" >
+                                                <button type="button" class="editButtonQuestion"
+                                                        (click)="editQuestion(question.id)" data-toggle="tooltip"
+                                                        data-placement="bottom" title="Edit">
 
                                                         <i class="material-icons">
-                                                                create</i> 
-                                                        
-                                                        </button>
+                                                                create</i>
+
+                                                </button>
 
                                                 <button type="button" class="deleteButtonQuestion"
-                                                        (click)="deleteQuestion(question.id)" data-toggle="tooltip" data-placement="bottom" title="Delete">
+                                                        (click)="deleteQuestion(question.id)" data-toggle="tooltip"
+                                                        data-placement="bottom" title="Delete">
 
                                                         <i class="material-icons">
                                                                 delete</i>
-                                                
+
                                                 </button>
                                         </td>
                                 </tr>
