--- a/src/app/layout/interview-results/interview-results.component.scss
+++ b/src/app/layout/interview-results/interview-results.component.scss
@@ -3,3 +3,84 @@ h2{
     color:white;
 }
 
+#filter {
+  text-align: left;
+  width: 100%;
+  
+}
+
+.form-control {
+  display: block;
+  width: 20%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+#interviewResult {
+    margin-top: 20px;
+    font-family: "Trebuchet MS",Arial, Helvetica, sans-serif;
+    border-collapse: separate;
+    border-spacing: 0px;
+    width: 100%;
+  }
+
+  /* progressBar */
+  
+  
+
+/* top-left border-radius */
+table tr:first-child th:first-child {
+    border-top-left-radius: 20px;
+  }
+  
+  /* top-right border-radius */
+  table tr:first-child th:last-child {
+    border-top-right-radius: 20px;
+  }
+  
+  /* bottom-left border-radius */
+  table tr:last-child td:first-child {
+    border-bottom-left-radius: 20px;
+  }
+  
+  /* bottom-right border-radius */
+  table tr:last-child td:last-child {
+    border-bottom-right-radius: 20px;
+  }
+
+
+
+#interviewResult td {
+    border-top: 2px solid rgb(0, 0, 0);
+    padding: 8px;
+    
+  }
+
+#interviewResult tr {
+    background-color: white;
+    border-top: 2px solid rgb(0, 0, 0);
+    border-collapse: collapse;
+    text-align: center;
+}
+
+#interviewResult tr:hover{
+    background-color: lightgrey;
+} 
+
+#interviewResult th{
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border: none;
+    text-align: center;
+    background-color: rgb(0, 0, 120) !important;
+    color: white;
+}
+
