--- a/src/app/layout/interview/interview.component.html
+++ b/src/app/layout/interview/interview.component.html
@@ -38,14 +38,14 @@
                     </option>
                 </select>
             </td>
-            <td style="width: 40px;">
+            <!-- <td style="width: 40px;">
                 <button type="button" class="deleteInterview" (click)="deleteQuestion()" data-toggle="tooltip"
                     data-placement="bottom" title="Delete">
 
                     <i class="material-icons">
                         delete</i>
                 </button>
-            </td>
+            </td> -->
         </tr>
     </table>
 </section>
