--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -13,8 +13,7 @@
         
         <!-- <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter"> -->
 
-        <input (keyup)="getByEmail()" [(ngModel)]="value" placeholder="Search user" id="filter"
-                class="rounded mb-2">
+        <input (keyup)="getByEmail()" [(ngModel)]="value" placeholder="Search user" id="filter" class="rounded mb-2">
 
         <table id="account">
                 <tr>
