--- a/src/app/layout/interview/interview-load/interview-load.component.html
+++ b/src/app/layout/interview/interview-load/interview-load.component.html
@@ -5,6 +5,28 @@
     </button>
 </div>
 <div class="modal-body">
+    <ngb-accordion  [closeOthers]="true" *ngFor="let interview of interviews; let i = index">
+        <ngb-panel>
+            <ng-template ngbPanelTitle>
+                {{interview.title}}
+              </ng-template>
+          <ng-template ngbPanelContent>
+            <div id="table" class="table-container">
+                <table id="questionTable" >
+                    <tr *ngFor = "let questions of interviewQuestions[i]">
+                        <td *ngFor = "let obj of questions | keyvalue">
+                            <div>
+                                <span>
+                                    {{obj.value}}
+                                </span>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+          </ng-template>
+        </ngb-panel>
+      </ngb-accordion >
     <label for="role">Select Interview-Template:</label>
     <select class="form-control" [(ngModel)]="selectedTemplate">
         <option value="" hidden selected>Choose One</option>
