--- a/src/app/layout/interview/interview-load/interview-load.component.html
+++ b/src/app/layout/interview/interview-load/interview-load.component.html
@@ -5,7 +5,8 @@
     </button>
 </div>
 <div class="modal-body">
-    <ngb-accordion  [closeOthers]="true" *ngFor="let interview of interviews; let i = index">
+    <label for="templates">Interview Templates:</label>
+    <ngb-accordion id="templates" [closeOthers]="true" *ngFor="let interview of interviews; let i = index">
         <ngb-panel>
             <ng-template ngbPanelTitle>
                 {{interview.title}}
@@ -26,9 +27,9 @@
             </div>
           </ng-template>
         </ngb-panel>
-      </ngb-accordion >
-    <label for="role">Select Interview-Template:</label>
-    <select class="form-control" [(ngModel)]="selectedTemplate">
+      </ngb-accordion>
+    <label style="margin-top: 2%;" for="role">Select Interview-Template:</label>
+    <select id="role" class="form-control" [(ngModel)]="selectedTemplate">
         <option value="" hidden selected>Choose One</option>
         <option [value]="interview.id" *ngFor="let interview of interviews; let i = index">
             {{interview.title}}
