export pdf button position

--- a/src/app/layout/interview/interview.component.html
+++ b/src/app/layout/interview/interview.component.html
@@ -7,7 +7,7 @@
         <button class="loadButton" style="float: right;" (click)="submitInterview()">
             <span>Submit Interview</span>
         </button>
-        <button class="loadButton" (click)="generatePdf()">
+        <button class="loadButton" style="float: right;" (click)="generatePdf()">
             <span>Export PDF</span>
         </button>
     </div>
